2001-07-15  Philippe Elie  <ph_e@club-internet.fr>

	* dae/oprofiled.c: fix oprofiled --version to work even if the
	  profiler is not already started.

	* gui/oprofile: many cleanup. Fix bug track #435248. Make the gui more
	  independant on the number of counter.

	* pp/op_to_source: fix bug in command line arguments handling.
	
	* pp/opf_filter.h:
	* pp/opf_filter.cpp:
	* pp/opf_container.cpp: Apply some cleanup suggested by John, principally
	  change few inheritance to composition.

	* pp/oprof_convert.c: fix --version.

2001-07-14  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml:
	* doc/oprofile.1.in: minor doc fix.

2001-07-14  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: small tidies
 
2001-07-01  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.1.in:
	* doc/oprofile.sgml: document op_to_source, oprof_convert and the
	  oprofile gui

	* gui/oprofile: onStartProfiling() check that count is in the allowed
	  range. onStopProfiling() flush the samples
 
2001-07-14  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in: dist fix
 
2001-07-14  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: make it clear we want vmlinux not vmlinuz

	* doc/html/: remove generated files from CVS

	* Makefile.in: changes to create HTML files on dist 
 
2001-06-30  John Levon  <moz@compsoc.man.ac.uk>

	* pp/Makefile.in: fix the fix

	* pp/opf_filter.h: very minor changes
 
2001-06-29  John Levon  <moz@compsoc.man.ac.uk>

	* pp/Makefile.in: fix up for opf_filter

	* configure.in: add AC_PROG_CXX

2001-06-29  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.cpp:
	* pp/opf_container.cpp:
	* pp/opf_filter.h:
	* pp/op_to_source: new file which provide a source annotation utility.
	* pp/Makefile.in: build and install opf_filter / op_to_source

2001-06-29  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in:
	* dae/opd_util.h: hide __attribute__((malloc)) warnings
	  when necessary. Document --with-cc bug.
 